// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About renders correctly with all props 1`] = `
.c0 {
  margin-top: 4rem;
  margin-bottom: 4rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c8 {
  display: flex;
  gap: 0.75rem;
  flex-wrap: wrap;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  color: var(--color-headline);
  margin: 0;
  font-size: 2.5rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c6 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c9 {
  border: 1px solid var(--color-main);
  color: var(--color-paragraph);
  border-radius: 9999px;
  display: inline-block;
  font-size: 0.875rem;
  padding: 0.5rem 1rem;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--color-highlight);
  margin: 0 0 1.25rem;
}

.c5 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c7 {
  max-width: 680px;
  line-height: 1.7;
  margin-bottom: 2rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

<div>
  <section
    class="c0"
    id="about"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        About
      </p>
      <h2
        class="c4 c5"
      >
        Senior Frontend Developer & Tech Lead
      </h2>
      <p
        class="c6 c7"
      >
        I build high-performance ecommerce experiences with React, Next.js, TypeScript and Shopify. Over a decade working across agencies and in-house teams — from Milan to Amsterdam to Bangkok — always remote-first, always shipping.
      </p>
      <div
        class="c8"
      >
        <span
          class="c9"
        >
          📍 Bangkok, Thailand
        </span>
        <span
          class="c9"
        >
          💼 Open to remote roles
        </span>
      </div>
    </section>
  </section>
</div>
`;

exports[`About renders correctly without optional tags 1`] = `
.c0 {
  margin-top: 4rem;
  margin-bottom: 4rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  color: var(--color-headline);
  margin: 0;
  font-size: 2.5rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c6 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--color-highlight);
  margin: 0 0 1.25rem;
}

.c5 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c7 {
  max-width: 680px;
  line-height: 1.7;
  margin-bottom: 2rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

<div>
  <section
    class="c0"
    id="about"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        About
      </p>
      <h2
        class="c4 c5"
      >
        Senior Frontend Developer & Tech Lead
      </h2>
      <p
        class="c6 c7"
      >
        I build high-performance ecommerce experiences with React, Next.js, TypeScript and Shopify.
      </p>
    </section>
  </section>
</div>
`;
